# ML-models-from-scratch

./: .gitignore  README.md  pyproject.toml
ML/: classification.ipynb  logreg.ipynb  regression.ipynb
ML/classic_ml_models/: linear_models.ipynb  linear_models.py
ML/classic_ml_models/linear_models/: linear_models.ipynb  linear_models.py
ML/classic_ml_models/tree_algorithms/: tree.ipynb  tree.py
ML/metrics/: metrics.py
