[project]
name = "programming"
version = "0.1.0"
description = "making ML models from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz==0.21",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
